some more structure

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">ADZ Malta Green Youth</a>
+					<a class="navbar-brand" href="index.html">ADZ Malta Green Youth</a>
 				</div>
 				<noscript>
 					<div>Your JavaScript is disabled - this might hurt your experience. Please follow these <a href="http://www.enable-javascript.com/" target="_blank">steps</a>.</div>
@@ -32,9 +32,10 @@
 				</div>
 				<div class="collapse navbar-collapse" id="main-menu">
 					<ul class="nav navbar-nav navbar-right">
-						<li{% if page.title == 'Home' %} class="active"{% endif %}><a href="#">Home</a></li>
+						<li{% if page.title == 'Home' %} class="active"{% endif %}><a href="index.html">Home</a></li>
 						<li{% if page.title == 'Blog' %} class="active"{% endif %}><a href="#">Blog</a></li>
-						<li{% if page.title == 'Portfolio' %} class="active"{% endif %}><a href="#">Portfolio</a></li>
+						<li{% if page.title == 'Campaigns' %} class="active"{% endif %}><a href="#">Campaigns</a></li>
+						<li{% if page.title == 'Events' %} class="active"{% endif %}><a href="#">Events</a></li>
 						<li{% if page.title == 'About' %} class="active"{% endif %}><a href="about.html">About</a></li>
 					</ul>
 				</div>
