--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,9 +33,10 @@
 				<div class="collapse navbar-collapse" id="main-menu">
 					<ul class="nav navbar-nav navbar-right">
 						<li{% if page.title == 'Home' %} class="active"{% endif %}><a href="index.html">Home</a></li>
-						<li{% if page.title == 'Blog' %} class="active"{% endif %}><a href="#">Blog</a></li>
-						<li{% if page.title == 'Campaigns' %} class="active"{% endif %}><a href="#">Campaigns</a></li>
-						<li{% if page.title == 'Events' %} class="active"{% endif %}><a href="#">Events</a></li>
+						<li{% if page.title == 'Blog' %} class="active"{% endif %}><a href="blog.html">Blog</a></li>
+						<li{% if page.title == 'Campaigns' %} class="active"{% endif %}><a href="campaigns.html">Campaigns</a></li>
+						<li{% if page.title == 'Events' %} class="active"{% endif %}><a href="events.html">Events</a></li>
+						<li{% if page.title == 'Contact' %} class="active"{% endif %}><a href="contact.html">Contact</a></li>
 						<li{% if page.title == 'About' %} class="active"{% endif %}><a href="about.html">About</a></li>
 					</ul>
 				</div>
